server/vm-k8s/k8s/base/ots/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ots
spec:
  selector:
    app: ots
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
