server/vm-k8s/k8s/base/ots/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ots
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`ots.10.0.2.15.nip.io`)
      services:
        - kind: Service
          name: ots
          port: 80
      middlewares:
        - name: add-x-forwarded-proto
  tls:
    certResolver: myresolver
